List based highscore implementation